# tenma72_api

./: README.md  pyproject.toml
tenma72_api/: __init__.py  settings.ini
tenma72_api/config_parsing/: __init__.py
tenma72_api/tenma72/: __init__.py
